chore: docker push 오류 수정

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,6 +20,6 @@ jobs:
 
       - name: build docker image
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} docker.io
           docker image build -t ${{ secrets.DOCKER_REPO }}/kotlin-web .
           docker push ${{ secrets.DOCKER_REPO }}/kotlin-web
